<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent
     for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false">

        <LinearLayout
            android:id="@+id/headerbar"
            style="@style/HeaderBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical">

            <include layout="@layout/toolbar_actionbar" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/landing_img"
                android:layout_width="@dimen/landing_img_width"
                android:layout_height="@dimen/landing_img_height"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/desc_landing_img"
                android:scaleType="centerInside"
                android:src="@drawable/structura_logo" />

            <TextView
                android:id="@+id/landing_body_txt_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/element_spacing_normal"
                android:paddingLeft="@dimen/content_padding_normal"
                android:paddingRight="@dimen/content_padding_normal"
                android:text="@string/landing_body_txt_1"
                android:textAppearance="@style/TextBody2"
                android:textIsSelectable="false" />

            <TextView
                android:id="@+id/landing_body_txt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/element_spacing_normal"
                android:paddingLeft="@dimen/content_padding_normal"
                android:paddingRight="@dimen/content_padding_normal"
                android:text="@string/landing_body_txt_2"
                android:textAppearance="@style/TextBody1"
                android:textIsSelectable="false" />
        </LinearLayout>

    </FrameLayout>

    <!-- Navigation drawer -->
    <include layout="@layout/drawer" />
</android.support.v4.widget.DrawerLayout>